# pikaball-revamped

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_ES.md
.github/workflows/: cmake-multi-platform.yml
assets/: pikaball-revamped.rc
assets/pikaball_mlp_resources/: PikaBall_all_rc.rc  PikaBall_all_res.res
cmake/: embed_resources.cmake  pika_embed.cmake
docs/: doxygen_config
include/pikaball/: common.hpp  game_state.hpp  input.hpp  random.hpp  resources.hpp  sprites.hpp
include/pikaball/controller/: computer_controller.hpp  keyboard_controller.hpp  player_controller.hpp
include/pikaball/physics/: ball.hpp  physics.hpp  physics_common.hpp  player.hpp
src/: CMakeLists.txt  cloud.cpp  cloud.hpp  game.cpp  game.hpp  main.cpp  pika_sound.hpp  random.hpp  sdl_system.cpp  sdl_system.hpp  sprites.hpp  wave.cpp  wave.hpp  window.cpp  window.hpp
src/controller/: CMakeLists.txt  computer_controller.cpp  keyboard_controller.cpp
src/physics/: CMakeLists.txt  ball.cpp  ball.hpp  physics.cpp  physics_common.hpp  player.cpp  player.hpp
src/view/: ball_view.cpp  ball_view.hpp  cloud.cpp  cloud.hpp  fps_view.hpp  intro_view.cpp  intro_view.hpp  menu_view.cpp  menu_view.hpp  options_view.hpp  player_view.cpp  player_view.hpp  special_intro_view.hpp  view.cpp  view.hpp  volley_view.cpp  volley_view.hpp  wave.cpp  wave.hpp
